# WikiKnowledge

./: .gitignore  README.MD  kb_manager.py  main.py  pyproject.toml  run.py
.agents/: instructions.md
.agents/google-drive-plugin/: README.md  architecture.md  caching-strategy.md  google-api-reference.md  implementation-plan.md  open-questions.md
.agents/knowledge-sources-feature/: README.md  annotation-conventions.md  architecture.md  codebase-context.md  implementation-plan.md  link-syntax.md  motivation.md  open-questions.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  chat.js  editor.js  graph.js  metadata.js  settings.js  utils.js  viewer.js
knowledge/: sources.json
knowledge/articles/: ai-interaction-guide.md  ai-service-architecture.md  ai-settings-and-mcp-binding.md  ai-source-code-annotations.md  category-features.md  fastapi-backend.md  google-docs-extension.md  google-drive-plugin.md  human-protected-blocks.md  in-memory-index.md  kb-manager.md  local-setup-and-mcp.md  markdown-frontmatter.md  mermaid-diagrams.md  overview.md  source-code-plugin.md  source-link-syntax.md  storage-abstraction.md  wiki-link-syntax.md
knowledge/categories/: ai-integration.md  knowledge-sources.md  markup-conventions.md  overview.md  system-architecture.md  user-manual.md
tests/: __init__.py  test_google_drive_plugin.py  test_mcp_server.py  test_parser.py
wikiknowledge/: __init__.py  mcp_server.py
wikiknowledge/api/: ai.py  app.py  articles.py  graph.py  resources.py  search.py  sources.py  sse.py
wikiknowledge/core/: graph.py  (+4 more)
(+7 files in other folders)
