[project]
name = "wikiknowledge"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "mcp[cli]>=1.0.0",
    "diff-match-patch>=20241021",
]

[project.scripts]
wikiknowledge = "wikiknowledge.api.app:main"
