[project]
name = "wikiknowledge"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "mcp[cli]>=1.0.0",
    "diff-match-patch>=20241021",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "markdownify>=0.13.0",
]

[project.scripts]
wikiknowledge = "wikiknowledge.api.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
